committing for test

--- a/src/main/resources/mycbr.properties
+++ b/src/main/resources/mycbr.properties
@@ -1,5 +1,10 @@
 
-PROJECT_NAME = support_prim_201803_working_v1.prj
+#PROJECT_NAME = support_prim_201804_working_inc_v1.prj
+
+#PROJECT_NAME = support_prim_correlation_based_attributes.prj
+
+PROJECT_NAME = support_prim_medical_expert_attributes.prj
+
 
 # name of the central concept 
 CONCEPT_NAME = patient
