--- a/pom.xml
+++ b/pom.xml
@@ -9,11 +9,11 @@
   <url>http://maven.apache.org</url>
 
   <properties>
-    <junit.version>3.8.1</junit.version>
+    <junit.version>4.12</junit.version>
     <java.version>1.8</java.version>
     <mycbr.version>3.2-SNAPSHOT</mycbr.version>
-    <spring.version>1.4.1.RELEASE</spring.version>
-    <springfox.version>2.4.0</springfox.version>
+    <spring.version>2.0.3.RELEASE</spring.version>
+    <springfox.version>2.9.2</springfox.version>
     <jackson.version>1.9.12</jackson.version>
     <mvn.compiler.version>3.5.1</mvn.compiler.version>
     <hibernate.version>1.0.1.Final</hibernate.version>
@@ -78,7 +78,11 @@
       <artifactId>hibernate-jpa-2.0-api</artifactId>
       <version>${hibernate.version}</version>
     </dependency>
-
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-annotations</artifactId>
+      <version>2.9.0</version>
+    </dependency>
   </dependencies>
 
 
